--- a/style.css
+++ b/style.css
@@ -1,38 +1,37 @@
 html, body {
     height: 100%;
-  }
+    margin: 0;
+    box-sizing: border-box;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    color: #212529;
+}
 
 .container {
-    position: relative;
-    height: 100%;
+    display: flex;
+    justify-content: center; /*Центрирование по горизонтали*/
+    align-items: center;     /*Центрирование по вертикали */
+    flex-direction: column;
+    height: 100%;    
+    margin: 0 auto;
+}
+
+.inline-flex {
+    display: inline-flex;
+    align-items: center;
 }
 
 .date  {
-    margin: 0;
-    background: yellow;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
+    font-size: 30px;
 }
 
-.time {
-    margin: 0;
-    background: yellow;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
+.yearLetters, .time {
+    font-size: 16px;
 }
 
-.calendar-container {
-    margin: 0;
-    background: yellow;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
+.yearLetters {
+    padding-left: 10px;
+}
+
+.alias {
+    font-size: 12px;
 }
