--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ html, body {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-family: 'Open Sans', sans-serif;
     color: #212529;    
 }
 
 .container {
     display: flex;
-    justify-content: center; /*Центрирование по горизонтали*/
-    align-items: center;     /*Центрирование по вертикали */
+    justify-content: center; 
+    align-items: center;   
     flex-direction: column;
     height: 100%;    
     margin: 0 auto;    
@@ -19,6 +19,7 @@ html, body {
     display: inline-flex;
     align-items: center;
     padding-left: 14vw;
+    height: 7vw;
 }
 
 .date  {
@@ -29,6 +30,10 @@ html, body {
     font-size: 6vw;
 }
 
+.time {
+    height: 7vw;
+}
+
 .yearLetters {
     padding-left: 2vw;
 }
@@ -36,3 +41,7 @@ html, body {
 .alias {
     font-size: 4vw;
 }
+
+/* preloader */
+
+#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: rgb(100, 100, 100) url(http://hello-site.ru//main/images/preloads/oval.svg) center center no-repeat;background-size:41px;}
