add new preloader for mobile and desctop version. fix calendar style

--- a/colors.scss
+++ b/colors.scss
@@ -10,11 +10,12 @@ $Van_color: rgb(137, 28, 91);
 $Van_color_bg: rgba(137, 28, 91, 0.2);
 $Lexius_color: rgb(13, 14, 64);
 $Lexius_color_bg: rgba(13, 14, 64, 0.2);
-$Catharina_color: rgb(71, 71, 107);
-$Catharina_color_bg: rgba(71, 71, 107, 0.2);
+$Catharina_color: rgb(170, 0, 51);
+$Catharina_color_bg: rgba(170, 0, 51, 0.2);
 
 .Michael-color {
     color: $Michael_color;
+    font-weight: 900;
 }
 
 .Michael-color-bg {
@@ -23,6 +24,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Egor-color {
     color: $Egor_color;
+    font-weight: 900;
 }
 
 .Egor-color-bg {
@@ -31,6 +33,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Sergius-color {
     color: $Sergius_color;
+    font-weight: 900;
 }
 
 .Sergius-color-bg {
@@ -39,6 +42,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Elia-color {
     color: $Elia_color;
+    font-weight: 900;
 }
 
 .Elia-color-bg {
@@ -47,6 +51,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Van-color {
     color: $Van_color;
+    font-weight: 900;
 }
 
 .Van-color-bg {
@@ -55,6 +60,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Lexius-color {
     color: $Lexius_color;
+    font-weight: 900;
 }
 
 .Lexius-color-bg {
@@ -63,6 +69,7 @@ $Catharina_color_bg: rgba(71, 71, 107, 0.2);
 
 .Catharina-color {
     color: $Catharina_color;
+    font-weight: 900;
 }
 
 .Catharina-color-bg {
