--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "colors.scss";
+@import "preloader.scss";
 
 html, body {
 
@@ -142,7 +143,9 @@ html, body {
     }
 
     .today {
-        background-color: rgba(255, 0, 0, 0.8);
+        background-color: rgba(255, 0, 0, 0.01);
+        font-weight: 900;
+        box-shadow: 1px 1px 2px 0px grey;
     }
 
     
@@ -150,11 +153,7 @@ html, body {
 
 
 
-/* preloader */
 
-#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: rgb(100, 100, 100) url(http://hello-site.ru//main/images/preloads/oval.svg) center center no-repeat;background-size:41px;}
-
-/* mobile/tables */
 
 @media (max-width:1280px){
     
