--- a/preloader.scss
+++ b/preloader.scss
@@ -1,92 +1,60 @@
-
-  .loader-container {
-    align-items: center;
-    background-color: #1D1F20;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    display: flex;
-    position: fixed;
-    z-index: 99999;
-    top: 0;
-    left: 0;
-    width: 100%;
-
-    .loader  {
-        animation: rotate 5s infinite;  
-        height: 50px;
-        width: 50px;
-        }
-        
-        .loader:before,
-        .loader:after {   
-        border-radius: 50%;
-        content: '';
-        display: block;
-        height: 20px;  
-        width: 20px;
-        }
-        .loader:before {
-        animation: ball1 1s infinite;  
-        background-color: #cb2025;
-        box-shadow: 30px 0 0 #f8b334;
-        margin-bottom: 10px;
-        }
-        .loader:after {
-        animation: ball2 1s infinite; 
-        background-color: #00a096;
-        box-shadow: 30px 0 0 #97bf0d;
-        }
-        
-        @keyframes rotate {
-        0% { 
-            -webkit-transform: rotate(0deg) scale(0.8); 
-            -moz-transform: rotate(0deg) scale(0.8);
-        }
-        50% { 
-            -webkit-transform: rotate(360deg) scale(1.2); 
-            -moz-transform: rotate(360deg) scale(1.2);
-        }
-        100% { 
-            -webkit-transform: rotate(720deg) scale(0.8); 
-            -moz-transform: rotate(720deg) scale(0.8);
-        }
-        }
-        
-        @keyframes ball1 {
-        0% {
-            box-shadow: 30px 0 0 #f8b334;
-        }
-        50% {
-            box-shadow: 0 0 0 #f8b334;
-            margin-bottom: 0;
-            -webkit-transform: translate(15px,15px);
-            -moz-transform: translate(15px, 15px);
-        }
-        100% {
-            box-shadow: 30px 0 0 #f8b334;
-            margin-bottom: 10px;
-        }
-        }
-        
-        @keyframes ball2 {
-        0% {
-            box-shadow: 30px 0 0 #97bf0d;
-        }
-        50% {
-            box-shadow: 0 0 0 #97bf0d;
-            margin-top: -20px;
-            -webkit-transform: translate(15px,15px);
-            -moz-transform: translate(15px, 15px);
-        }
-        100% {
-            box-shadow: 30px 0 0 #97bf0d;
-            margin-top: 0;
-        }
-        }
+*,:after,:before{
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box
   }
-
-
+  .mk-spinner-wrap{
+    
+    display: flex;
+    height: 100%;
+    width: 100%;    
+    position: fixed;
+    background: red; 
+  }
+  @-webkit-keyframes a{
+    0%{
+      -webkit-transform:rotate(0deg);
+      transform:rotate(0deg)
+    }
+    to{
+      -webkit-transform:rotate(1turn);
+      transform:rotate(1turn)
+    }
+  }
+  @keyframes a{
+    0%{
+      -webkit-transform:rotate(0deg);
+      transform:rotate(0deg)
+    }
+    to{
+      -webkit-transform:rotate(1turn);
+      transform:rotate(1turn)
+    }
+  }
+  .mk-spinner-doublecircle{
+    background:transparent;
+    -webkit-animation:a 2s linear infinite;
+    animation:a 2s linear infinite
+  }
+  .mk-spinner-doublecircle,.mk-spinner-doublecircle:after{
+    border:3px solid;
+    border-radius:50%;
+    content:"";
+    display:inline-block;
+    position:absolute;
+    width:50px;
+    height:50px;
+    top:50%;
+    margin-top:-25px;
+    left:50%;
+    margin-left:-25px;
+    z-index:1
+  }
+  .mk-spinner-doublecircle{
+    border-color:#1de9b6 rgba(0,0,0,.07)
+  }
+  .mk-spinner-doublecircle:after{
+    border-color:transparent #eeff41;
+    -webkit-animation:a 5s linear infinite;
+    animation:a 5s linear infinite
+  }
   
-  
- 
