--- a/preloader.scss
+++ b/preloader.scss
@@ -8,7 +8,7 @@
     height: 100%;
     width: 100%;    
     position: fixed;
-    background: red; 
+    background: rgb(37, 37, 37); 
   }
   @-webkit-keyframes a{
     0%{
