--- a/style.css
+++ b/style.css
@@ -53,6 +53,45 @@ html, body {
 
 /* calendar styles */ 
 
+table {
+    background-color: white;
+    border-collapse: collapse;
+    font-family: Tahoma,Geneva,sans-serif;
+    margin: 5px;
+    box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
+    border-radius: 4px;
+}
+
+thead {
+    display: block;
+    margin: 4px 4px 0px 4px;
+}
+
+tbody {
+    display: block;
+    margin: 0px 4px 4px 4px;
+}
+
+td,th{
+    display: inline-block;
+    float: left;
+    height: 36px;
+    width: 36px;
+    margin: 1px 2px;
+    line-height: 36px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: lighter;
+    cursor: default;
+    transition: color 0.1s,background-color 0.2s;
+    border-radius: 18px;
+}
+
+.calendar-month-title {
+    font-weight: bold;
+    width: 100%;
+}
+
 .free-month, .four-month {
 
     align-content: center;
