--- a/preloader.scss
+++ b/preloader.scss
@@ -1,3 +1,5 @@
+@import "colors.scss";
+
 *,:after,:before{
     -webkit-box-sizing:border-box;
     box-sizing:border-box
@@ -50,10 +52,10 @@
     z-index:1
   }
   .mk-spinner-doublecircle{
-    border-color:#1de9b6 rgba(0,0,0,.07)
+    border-color: $Michael_color  $Elia_color
   }
   .mk-spinner-doublecircle:after{
-    border-color:transparent #eeff41;
+    border-color:transparent $Sergius_color;
     -webkit-animation:a 5s linear infinite;
     animation:a 5s linear infinite
   }
