--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ table {
     background-color: white;
     border-collapse: collapse;
     font-family: Tahoma,Geneva,sans-serif;
-    margin: 5px;
+    margin: 20px 5px;
     box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
     border-radius: 4px;
 }
@@ -76,7 +76,7 @@ td,th{
     display: inline-block;
     float: left;
     height: 36px;
-    width: 36px;
+    width: 33px;
     margin: 1px 2px;
     line-height: 36px;
     text-align: center;
@@ -129,3 +129,50 @@ td,th{
 /* preloader */
 
 #hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: rgb(100, 100, 100) url(http://hello-site.ru//main/images/preloads/oval.svg) center center no-repeat;background-size:41px;}
+
+/* mobile/tables */
+
+@media (max-width:1280px){
+    
+    .free-month, .four-month {
+        
+          
+        -webkit-flex-direction: column; /* Safari */
+        flex-direction:         column;
+    }
+
+    table {
+        margin: 10px auto;
+        width: 60%;
+    }
+
+    th, td {
+        width: 7.8vw;
+    }
+
+   
+}
+
+@media (max-width:768px) {
+    table {
+        width: 62%;
+    }
+}
+
+@media (max-width:425px) {
+    table {
+        width: 67%;
+    }
+}
+
+@media (max-width:375px) {
+    table {
+        width: 68%;
+    }
+}
+
+@media (max-width:320px) {
+    table {
+        width: 71%;
+    }
+}
