--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,20 @@ html, body {
     .wr {
         height: 100%;
 
+        .more_info {
+            border-bottom: 1px dotted;
+            position: relative;
+          }
+          
+          .more_info .title {
+            position: absolute;
+            top: 20px;
+            background: silver;
+            padding: 4px;
+            left: 0;
+            white-space: nowrap;
+          }
+
         .container {
             display: flex;
             justify-content: center; 
