--- a/colors.scss
+++ b/colors.scss
@@ -15,37 +15,37 @@ $Catharina_color: rgb(170, 0, 51);
 
 .Michael-color {
     color: $Michael_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Egor-color {
     color: $Egor_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Sergius-color {
     color: $Sergius_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Elia-color {
     color: $Elia_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Van-color {
     color: $Van_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Lexius-color {
     color: $Lexius_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 .Catharina-color {
     color: $Catharina_color;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
 
 /* background color reserved */
