--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -10,7 +10,8 @@ html, body {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    //font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #212529;       
 
     .text-center {
