new css perfomance tooltip lib

--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -58,6 +58,11 @@
         width: 63vw !important;
     }
 
+    .signature {
+        bottom: 5px !important;        
+        right: 0px !important;
+    }
+
     .signature img {
         width: 20vw !important;
     }
